fix font-size of is-huge texts, z-index and font-size of yellow bar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,14 +20,10 @@
 }
 .h1 {
   line-height: 0.75;
-  font-size: $h1-font-size * 0.65;
+  font-size: $h1-font-size-mobile;
   @include media-breakpoint-up(md) {
     font-size: $h1-font-size;
   }
-}
-.is-huge {
-  font-size: $huge-font-size;
-  line-height: 0.75;
 }
 .font-size-xl-huge {
   @include media-breakpoint-up(xl) {
